--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
               <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
-              <li><a href="#">MACHINE LEARNING</a></li>
-              <li><a href="#">DEEP LEARNING</a></li>
-              <li><a href="#">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
+              <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
+              <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
+              <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
             </li>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="#">Da Ficção à Realidade</a></li>
+        <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
         <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
         <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
       </ul>
@@ -72,7 +72,7 @@
 <section id="hero">
   <div class="hero-container" data-aos="fade-up">
     <h1>IA Society</h1>
-    <h2>Projeto interdisciplinar sobre inteligência artificial</h2>
+    <h2>PROJETO INTERDISCIPLINAR SOBRE INTELIGÊNCIA ARTIFICIAL</h2>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -92,7 +92,8 @@
 
          <div class="sobre col-xl-6 col-lg-6 d-flex teste flex-column align-items-stretch justify-content-center">
           <div class="box-heading" data-aos="fade-up">
-            <p class="texto-explicativo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac enim at erat ornare rhoncus sed consequat sem. Etiam volutpat sem eu dui faucibus, nec volutpat diam posuere. Donec metus urna, ultricies eget eu mauris nisi. Etiam malesuada rhoncus pulvinar. Maecenas maximus elit mi, ac lobortis nisl dapibus vel. Aenean dapibus tellus a risus dignissim feugiat. Quisque volutpat sem eu dui faucibus, nec volutpat diam posuere. Donec metus urna, ultricies eget augue sed, cursus iaculis leo. Nunc id elit risus. Suspendisse potenti ipsum amet. Aenean commodo dapibus tempor. Vestibulum lacinia  consectetur adipiscing elit accumsan felis, at mattis sapien iaculis ac.</p>
+            <p class="texto-explicativo">Inteligência Artificial é uma área da ciência da computação que vem ganhado muito espaço nos últimos anos. Seu objetivo é, ao simular o raciocínio humano, ser capaz de realizar atividades que normalmente gastariam muito tempo e/ou mão de obra de forma rápida e independente. 
+            Nós, do grupo IA Society, explicaremos em nosso projeto como esta tecnologia funciona, como está sendo implementada em nosso cotidiano e as diferenças existentes entre o que vemos na ficção para a realidade.</p>
           </div>
 
         </div>
@@ -109,24 +110,63 @@
         <div class="col-lg-4">
           <div class="box" data-aos="fade-up">
             <span>01</span>
-            <h4>O que é e como funciona?</h4>
-            <p>A Inteligência Artificial é uma área da informática dedicada a desenvolver máquinas e softwares...</p>
+            <a href="vwInteligenciaArtificial.html"><h4>O que é e como funciona?</h4>
+              <p>A Inteligência Artificial é uma área da informática dedicada a desenvolver máquinas e softwares...</p>
+            </a>
           </div>
         </div>
 
         <div class="col-lg-4 mt-4 mt-lg-0">
           <div class="box" data-aos="fade-up" data-aos-delay="100">
             <span>02</span>
-            <h4>Da ficção à realidade</h4>
-            <p>Ficção ou realidade? Quando falamos sobre inteligência artificial, logo nos vem à mente...</p>
+            <a href="vwMachineLearning.html">
+              <h4>Machine Learning</h4>
+              <p>Algumas partes do aprendizado automático estão intimamente ligadas à estatística computacional...</p>
+            </a>
           </div>
         </div>
 
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
           <div class="box">
             <span>03</span>
-            <h4>Como está presente em nosso cotidiano?</h4>
-            <p>A Inteligência Artificial funciona em processos que, muitas vezes, não percebemos...</p>
+            <a href="vwDeepLearning.html">
+              <h4>Deep Learning</h4>
+              <p>A aprendizagem profunda é um dos metodos mais abrangentes de aprendizado de máquina...</p>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <br>
+
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="box" data-aos="fade-up">
+            <span>04</span>
+            <a href="vwLinguagemNatural.html">
+              <h4>Processamento de Linguagem Natural</h4>
+              <p>Sistemas de geração de língua natural convertem informação de bancos de dados de computadores...</p>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0">
+          <div class="box" data-aos="fade-up" data-aos-delay="100">
+            <span>05</span>
+            <a href="vwFiccaoaRealidade.html">
+              <h4>Da ficção à realidade</h4>
+              <p>Ficção ou realidade? Quando falamos sobre inteligência artificial, logo nos vem à mente...</p>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
+          <div class="box">
+            <span>06</span>
+            <a href="vwCotidiano.html">
+              <h4>Como está presente em nosso cotidiano?</h4>
+              <p>A Inteligência Artificial funciona em processos que, muitas vezes, não percebemos...</p>
+            </a>
           </div>
         </div>
       </div>
@@ -157,15 +197,10 @@
           <div class="member" data-aos="fade-up">
             <div class="member-img">
               <img src="assets/img/team/anagabrielle.jpg" class="img-fluid" alt="">
-              <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
             </div>
             <div class="member-info">
               <h4>Ana Gabrielle da Silva Oliveira</h4>
-              <span>Chief Executive Officer</span>
+              <span>Pesquisa</span>
             </div>
           </div>
         </div>
@@ -177,12 +212,11 @@
               <div class="social">
                 <a href="https://github.com/analuiza02"><i class="bi bi-github"></i></a>
                 <a href="https://instagram.com/_analuolifer?utm_medium=copy_link"><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Ana Luiza de Oliveira Ferreira</h4>
-              <span>Product Manager</span>
+              <span>Pitch e pesquisa</span>
             </div>
           </div>
         </div>
@@ -193,13 +227,11 @@
               <img src="assets/img/team/beatriz.jpeg" class="img-fluid" alt="">
               <div class="social">
                 <a href="https://github.com/beatriz-pereira"><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Beatriz Zaratine Pereira</h4>
-              <span>CTO</span>
+              <span>Site e pesquisa</span>
             </div>
           </div>
         </div>
@@ -211,12 +243,11 @@
               <div class="social">
                 <a href="https://github.com/gabrielaakiko"><i class="bi bi-github"></i></a>
                 <a href="https://instagram.com/gabii_akiko?utm_medium=copy_link"><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
             <div class="member-info">
               <h4>Gabriela Akiko de Fiore Santos</h4>
-              <span>Chief Executive Officer</span>
+              <span>Pesquisa</span>
             </div>
           </div>
         </div>
@@ -225,15 +256,10 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
               <img src="assets/img/team/gabrielanicassio.jpg" class="img-fluid" alt="">
-              <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
             </div>
             <div class="member-info">
               <h4>Gabriela Nicassio Silva</h4>
-              <span>Product Manager</span>
+              <span>Pesquisa</span>
             </div>
           </div>
         </div>
@@ -250,7 +276,7 @@
             </div>
             <div class="member-info">
               <h4>Natali Schers</h4>
-              <span>CTO</span>
+              <span>Site e pesquisa</span>
             </div>
           </div>
         </div>
