--- a/vwLinguagemNatural.html
+++ b/vwLinguagemNatural.html
@@ -37,137 +37,133 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+ <!-- ======= Header ======= -->
  <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-between">
+  <div class="container d-flex justify-content-between">
 
-      <div class="logo">
-        <h1 class="text-light"><a href="index.html">IA Society</a></h1>
-      </div>
+    <div class="logo">
+      <h1 class="text-light"><a href="index.html">IA Society</a></h1>
+      <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+    </div>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          
-         <li class="dropdown"><a href="#"><span>Temas</span> <i class="bi bi-chevron-right"></i></a>
-            <ul>
-              <li><a href="vwFiccaoaRealidade.html">IA da ficção a realidade</a></li>
-              <li class="dropdown"><a href="#"><span>Aprendizado de Máquina</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="vwMachineLearning.html">Machine Learning</a></li>
-                  <li><a href="vwDeepLearning.html">Deep Learning</a></li>
-                  <li><a href="vwLinguagemNatural.html">Processamento de Linguagem Natural (PLN)</a></li>
-                </ul>
-              </li/>
-            </ul>
+    <nav id="navbar" class="navbar">
+      <ul>
+        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+        <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
+          <ul>
+            <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+            <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
+            <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
+            <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
           </li>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </li>
+      <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
+      <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+      <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
+    </ul>
+    <i class="bi bi-list mobile-nav-toggle"></i>
+  </nav><!-- .navbar -->
 
-    </div>
-  </header>
+</div>
+</header><!-- End Header --> 
 
-  <main id="main">
-    <div class="row">
-       <img src="assets/img/learning.jpg" class="img-fluid" style="height: 100px;">
-     </div>
-       <div class="section-title" data-aos="zoom-in">
-          <h3>Processamento de Linguagem Natural <span>(PLN)</span></h3>
-          <p>Processamento de língua natural (PLN) é uma subárea da ciência da computação, inteligência artificial e da linguística, ela estuda os problemas da geração e compreensão automática de línguas humanas naturais.</p>
+<main id="main">
+  <div class="row">
+   <img src="assets/img/learning.jpg" class="img-fluid" style="height: 100px;">
+ </div>
+ <div class="section-title" data-aos="zoom-in">
+  <h3>Processamento de Linguagem Natural <span>(PLN)</span></h3>
+  <p>Processamento de língua natural (PLN) é uma subárea da ciência da computação, inteligência artificial e da linguística, ela estuda os problemas da geração e compreensão automática de línguas humanas naturais.</p>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-5 col-md-6" align="justify">
+      <p>Sistemas de geração de língua natural convertem informação de bancos de dados de computadores em linguagem compreensível ao ser humano e também convertem a linguagem humana em representações mais facilmente manipuláveis por programas de computador. A maior dificuldade da PLN são compreensão de língua natural, ou seja, extrair a linguagem de humanos para que faça sentido para computadores.</p>
+      <p>A PLN tem base na aprendizagem mêcanica, especialmente na aprendizagem de máquinas estatísticas. Anteriormente, implementações de tarefas de processamento de linguagem envolviam a codificação direta de grandes conjuntos de regras. O paradigma da aprendizagem automática induz a aprendizagem automática de regras através de análises de corpora de exemplos típicos do mundo real ao invés de usar algoritmos gerais de aprendizagem, como a estátistica.</p>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-5 col-md-6" align="justify">
-          <p>Sistemas de geração de língua natural convertem informação de bancos de dados de computadores em linguagem compreensível ao ser humano e também convertem a linguagem humana em representações mais facilmente manipuláveis por programas de computador. A maior dificuldade da PLN são compreensão de língua natural, ou seja, extrair a linguagem de humanos para que faça sentido para computadores.</p>
-          <p>A PLN tem base na aprendizagem mêcanica, especialmente na aprendizagem de máquinas estatísticas. Anteriormente, implementações de tarefas de processamento de linguagem envolviam a codificação direta de grandes conjuntos de regras. O paradigma da aprendizagem automática induz a aprendizagem automática de regras através de análises de corpora de exemplos típicos do mundo real ao invés de usar algoritmos gerais de aprendizagem, como a estátistica.</p>
-        </div>
-        <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                <figure class="figure ">
-                  <img src="assets/img/aprendizado.PNG" class="figure-img img-fluid rounded" alt="...">
-                  <figcaption class="figure-caption"><a href="https://br.freepik.com/vetores/tecnologia">Tecnologia vetor criado por vectorjuice - br.freepik.com</a></figcaption>
-                </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-5 col-lg-6">
-          <figure class="figure">
-                  <img src="assets/img/aprendizado2.PNG" class="figure-img img-fluid rounded" alt="...">
-                  <figcaption class="figure-caption"><a href="https://br.freepik.com/vetores/tecnologia">Tecnologia vetor criado por vectorjuice - br.freepik.com</a></figcaption>
-          </figure>
-        </div>
-        <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+      <figure class="figure ">
+        <img src="assets/img/aprendizado.PNG" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption"><a href="https://br.freepik.com/vetores/tecnologia">Tecnologia vetor criado por vectorjuice - br.freepik.com</a></figcaption>
+      </figure>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 col-md-5 col-lg-6">
+      <figure class="figure">
+        <img src="assets/img/aprendizado2.PNG" class="figure-img img-fluid rounded" alt="...">
+        <figcaption class="figure-caption"><a href="https://br.freepik.com/vetores/tecnologia">Tecnologia vetor criado por vectorjuice - br.freepik.com</a></figcaption>
+      </figure>
+    </div>
+    <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+      <br>
+      <h4 class="title"><a href="">Algumas das aplicações da PLN são:</a></h4>
+      <p class="description"><i class='bx bxs-caret-right-circle'></i> Extração de Informações</p>
+      <p class="description"><i class='bx bxs-caret-right-circle'></i>Análise de sentimentos</p>
+      <p class="description"><i class='bx bxs-caret-right-circle'></i> Respostas a perguntas</p>
+      <p class="description"><i class='bx bxs-caret-right-circle'></i> Pesquisa semântica </p>
+    </div>
+  </div>
+</div>
+<section id="why-us" class="why-us">
+  <div class="container">
+
+    <div class="section-title" data-aos="zoom-in">
+      <h2>Referências</h2>
+      <h3>Veja mais em:</h3>
+    </div>
+
+    <div class="row align-items-center">
+
+      <div class="col-lg-6">
+        <div class="box" data-aos="fade-up">
+          <span>01</span>
+          <p>https://pt.wikipedia.org/wiki/Processamento_de_linguagem_natural</p>
           <br>
-          <h4 class="title"><a href="">Algumas das aplicações da PLN são:</a></h4>
-               <p class="description"><i class='bx bxs-caret-right-circle'></i> Extração de Informações</p>
-               <p class="description"><i class='bx bxs-caret-right-circle'></i>Análise de sentimentos</p>
-               <p class="description"><i class='bx bxs-caret-right-circle'></i> Respostas a perguntas</p>
-               <p class="description"><i class='bx bxs-caret-right-circle'></i> Pesquisa semântica </p>
         </div>
       </div>
-    </div>
-         <section id="why-us" class="why-us">
-      <div class="container">
-
-        <div class="section-title" data-aos="zoom-in">
-          <h2>Referências</h2>
-          <h3>Veja mais em:</h3>
+      <div class="col-lg-6">
+        <div class="box" data-aos="fade-up">
+          <span>02</span>
+          <p>https://www.viacognitiva.com.br/single-post/aplicacoes-pln-importantes</p>
         </div>
-
-        <div class="row align-items-center">
-
-          <div class="col-lg-6">
-            <div class="box" data-aos="fade-up">
-              <span>01</span>
-              <p>https://pt.wikipedia.org/wiki/Processamento_de_linguagem_natural</p>
-              <br>
-            </div>
-          </div>
-           <div class="col-lg-6">
-            <div class="box" data-aos="fade-up">
-              <span>02</span>
-              <p>https://www.viacognitiva.com.br/single-post/aplicacoes-pln-importantes</p>
-            </div>
-          </div>
+      </div>
 
     </section>
-  
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-
-    <div class="footer-top">
-
     
 
-    <div class="container footer-bottom clearfix">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Remember</span></strong>. All Rights Reserved
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+
+      <div class="container footer-bottom clearfix">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Remember</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/remember-free-multipurpose-bootstrap-template/ -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/remember-free-multipurpose-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+    </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/purecounter/purecounter.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</body>
+  </body>
 
-</html>
+  </html>
