--- a/vwDeepLearning.html
+++ b/vwDeepLearning.html
@@ -70,7 +70,7 @@
 
 <main id="main">
   <div class="row">
-   <img src="assets/img/learning.jpg" class="img-fluid" style="height: 100px;">
+    <img src="assets/img/footer-bg.jpg" class="img-fluid" style="height: 100px;">
  </div>
  <div class="container">
   <div class="section-title" data-aos="zoom-in">
@@ -82,7 +82,7 @@
       <br>
       <p>A aprendizagem profunda é um dos metodos mais abrangentes de aprendizado de máquina. Ao invés de organizar os dados para serem executados através de equações predefinidas, o deep learning configura parâmetros básicos sobre os dados e treina o computador para aprender sozinho através do reconhecimento padrões em várias camadas de processamento.
       A pesquisa nesta área tenta fazer representações melhores e criar modelos para aprender partir de um grande volume de dados. o deep learning é usado para classificar imagens, reconhecer fala, detectar objetos e descrever conteúdo. Sistemas como Cortana e Siri são parcialmente alimentados por deep learning.</p>
-      
+
     </div>
     <div class="col-lg-5 col-md-5 d-flex align-items-stretch">
       <figure class="figure">
@@ -123,7 +123,7 @@
       </div>
 
     </section>
-    
+
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
