--- a/vwLinguagemNatural.html
+++ b/vwLinguagemNatural.html
@@ -70,7 +70,7 @@
 
 <main id="main">
   <div class="row">
-   <img src="assets/img/learning.jpg" class="img-fluid" style="height: 100px;">
+   <img src="assets/img/footer-bg.jpg" class="img-fluid" style="height: 100px;">
  </div>
  <div class="section-title" data-aos="zoom-in">
   <h3>Processamento de Linguagem Natural <span>(PLN)</span></h3>
