--- a/vwMachineLearning.html
+++ b/vwMachineLearning.html
@@ -68,7 +68,7 @@
 
 <main id="main">
   <div class="row">
-   <img src="assets/img/learning.jpg" class="img-fluid" style="height: 100px;">
+   <img src="assets/img/footer-bg.jpg" class="img-fluid" style="height: 100px;">
  </div>
  <div class="container">
   <div class="section-title" data-aos="zoom-in">
