--- a/vwDeepLearning.html
+++ b/vwDeepLearning.html
@@ -48,7 +48,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
               <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
@@ -60,7 +60,6 @@
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
         <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
-        <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
