--- a/vwLinguagemNatural.html
+++ b/vwLinguagemNatural.html
@@ -38,35 +38,34 @@
 <body>
 
  <!-- ======= Header ======= -->
- <header id="header" class="d-flex align-items-center">
-  <div class="container d-flex justify-content-between">
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex justify-content-between">
 
-    <div class="logo">
-      <h1 class="text-light"><a href="index.html">IA Society</a></h1>
-      <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-    </div>
+      <div class="logo">
+        <h1 class="text-light"><a href="index.html">IA Society</a></h1>
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      </div>
 
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-        <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
-          <ul>
-            <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
-            <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
-            <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
-            <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
-          </li>
-        </ul>
-      </li>
-      <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
-      <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
-      <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
-    </ul>
-    <i class="bi bi-list mobile-nav-toggle"></i>
-  </nav><!-- .navbar -->
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
+            <ul>
+              <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+              <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
+              <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
+              <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
+            </li>
+          </ul>
+        </li>
+        <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
+        <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
 
-</div>
-</header><!-- End Header --> 
+  </div>
+</header><!-- End Header -->  
 
 <main id="main">
   <div class="row">
