--- a/vwFiccaoaRealidade.html
+++ b/vwFiccaoaRealidade.html
@@ -60,24 +60,27 @@
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
         <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+        <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
   </div>
-</header><!-- End Header -->  
+</header><!-- End Header --> 
 
 <main id="main">
   <section id="about" class="about">
     <div class="container">
 
       <div class="row">
-        <div class="section-title" >
-          <h3>Inteligência artificial, da ficção á realidade:</h3>
+
+        <div class="section-title" data-aos="zoom-in">
+          <h2>Inteligência artificial, da ficção á realidade:</h2>
         </div>
-        <div class="col-xl-6 col-lg-6 d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
+
+        <div class="col-xl-6 col-lg-6 d-flex flex-column align-items-stretch justify-content-center px-lg-5">
           <div class="box-heading" data-aos="fade-up">
-            
+
             <p>Ficção ou realidade? Quando falamos sobre o assunto da inteligência artificial (IA) logo nos vem a mente aquelas ideias de filmes antigos e também atuais como “AI Artificial Intelligence” (2001), “Her”(20013) ou “Metropolis”(1927) que nos passam visões sobre um mundo totalmente tomado por máquina e universos paralelos em uma era muito distante á que vivemos, porém ao tratar sobre IA vamos muito além da ficção, precisamos entender que o futuro tão esperado já começou e de uma forma totalmente lógica e segura, que em certo ponto se desprende dos filmes e séries e passa a se tornar extraordinariamente real e palpável aos dias de hoje;                  Como exemplos podemos citar coisas extremamente próximas e cotidianas para muitos, em um celular comum hoje já podemos encontrar a inteligência artificial em: </p>
           </div>
 
@@ -102,9 +105,8 @@
         </div>
         <div class="box-heading" data-aos="fade-up">
           <br>
-
-          <p>e até mesmo por trás dos algoritmos que te recomendam produtos, fotos, filmes, vídeos e perfis de outras pessoas.</p>
-          <p>E também temos aquelas realidades fora do nosso dia a dia, aquela tecnologia em pesquisa e construção que está sendo estudada cada vez mais, como exemplos disso podemos citar: carros auto dirigíveis, a robô Sophia ou ou ASIMO que viralizaram por um tempo nas redes sociais, além de muitas máquinas em testes no âmbito da medicina.</p>
+          <br>
+          <p>Ou até mesmo por trás dos algoritmos que te recomendam produtos, fotos, filmes, vídeos e perfis de outras pessoas. Também temos aquelas realidades fora do nosso dia a dia, aquela tecnologia em pesquisa e construção que está sendo estudada cada vez mais, como exemplos disso podemos citar: carros auto dirigíveis, a robô Sophia ou ou ASIMO que viralizaram por um tempo nas redes sociais, além de muitas máquinas em testes no âmbito da medicina.</p>
         </div>
       </div>
 
@@ -117,7 +119,6 @@
 
       <div class="section-title" data-aos="zoom-in">
         <h2>Referências</h2>
-        <h3>Veja mais em:</h3>
       </div>
 
       <div class="row">
