Atualização do Navbar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
-              <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+              <li><a href="vwIA.html">O QUE É E COMO FUNCIONA?</a></li>
               <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
               <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
               <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
@@ -59,7 +59,7 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
-        <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+        <li><a class="nav-link scrollto" href="vwCotidiano.html">Como está Presente em Nosso Cotidiano?</a></li>
         <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-xl-6 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="zoom-in">
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/m6yZqalEdJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/5T1kxXfLMtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
 
          <div class="sobre col-xl-6 col-lg-6 d-flex teste flex-column align-items-stretch justify-content-center">
