--- a/vwDeepLearning.html
+++ b/vwDeepLearning.html
@@ -37,7 +37,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+<!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
 
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
-              <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+              <li><a href="vwIA.html">O QUE É E COMO FUNCIONA?</a></li>
               <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
               <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
               <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
@@ -59,13 +59,13 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
-        <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+        <li><a class="nav-link scrollto" href="vwIACotidiano.html">Como está Presente em Nosso Cotidiano?</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
   </div>
-</header><!-- End Header -->  
+</header><!-- End Header -->
 
 <main id="main">
   <div class="row">
@@ -74,7 +74,7 @@
  <div class="container">
   <div class="section-title" data-aos="zoom-in">
     <h3>Aprendizado <span>Profundo</span></h3>
-    <p>A aprendizagem profunda, ou Deep Learning, em inglês, é um ramo de aprendizado de máquina baseado em um conjunto de algoritmos que tentam modelar abstrações de alto nível de dados usando camadas de processamento, compostas de várias transformações lineares e não lineares.</p>
+    <p style="text-align: center;">A aprendizagem profunda, ou Deep Learning, em inglês, é um ramo de aprendizado de máquina baseado em um conjunto de algoritmos que tentam modelar abstrações de alto nível de dados usando camadas de processamento, compostas de várias transformações lineares e não lineares.</p>
   </div>
   <div class="row">
     <div class="col-lg-7 col-md-7 d-flex align-items-stretch" data-aos="fade-up" align='justify'>
@@ -83,7 +83,7 @@
       A pesquisa nesta área tenta fazer representações melhores e criar modelos para aprender partir de um grande volume de dados. o deep learning é usado para classificar imagens, reconhecer fala, detectar objetos e descrever conteúdo. Sistemas como Cortana e Siri são parcialmente alimentados por deep learning.</p>
 
     </div>
-    <div class="col-lg-5 col-md-5 d-flex align-items-stretch">
+    <div class="col-lg-5 col-md-5 d-flex align-items-stretch" data-aos="fade-up"  >
       <figure class="figure">
         <img src="assets/img/deep.PNG" class="figure-img img-fluid rounded" alt="...">
         <figcaption class="figure-caption"><a href="https://br.freepik.com/vetores/abstrato">Abstrato vetor criado por kjpargeter - br.freepik.com</a></figcaption>
