--- a/vwMachineLearning.html
+++ b/vwMachineLearning.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
- <!-- ======= Header ======= -->
+<!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
 
@@ -49,7 +49,7 @@
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
-              <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+              <li><a href="vwIA.html">O QUE É E COMO FUNCIONA?</a></li>
               <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
               <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
               <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
@@ -57,13 +57,13 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
-        <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+        <li><a class="nav-link scrollto" href="vwIACotidiano.html">Como está Presente em Nosso Cotidiano?</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
   </div>
-</header><!-- End Header -->  
+</header><!-- End Header -->
 
 <main id="main">
   <div class="row">
@@ -72,7 +72,7 @@
  <div class="container">
   <div class="section-title" data-aos="zoom-in">
     <h3>Aprendizado de <span>Máquina</span></h3>
-    <p>O Aprendizado de Maquina tem como base o aprendizado de máquina baseado em dados, para descubir padrões, tomar decisões... tudo isso com pouca interferência humana</p>
+    <p style="text-align: center;">O Aprendizado de Maquina tem como base o aprendizado de máquina baseado em dados, para descubir padrões, tomar decisões... tudo isso com pouca interferência humana</p>
   </div>
   <div class="row">
     <div class="box-heading" data-aos="fade-up" align='justify'>
