--- a/vwFiccaoaRealidade.html
+++ b/vwFiccaoaRealidade.html
@@ -37,7 +37,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+<!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between">
 
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
-              <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+              <li><a href="vwIA.html">O QUE É E COMO FUNCIONA?</a></li>
               <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
               <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
               <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
@@ -59,14 +59,13 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
-        <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
-        <li><a class="nav-link scrollto active" href="#team">Equipe</a></li>
+        <li><a class="nav-link scrollto" href="vwIACotidiano.html">Como está Presente em Nosso Cotidiano?</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
   </div>
-</header><!-- End Header --> 
+</header><!-- End Header -->
 
 <main id="main">
   <section id="about" class="about">
