--- a/vwLinguagemNatural.html
+++ b/vwLinguagemNatural.html
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Inteligência Artificial</span></a>
             <ul>
-              <li><a href="#">O QUE É E COMO FUNCIONA?</a></li>
+              <li><a href="vwIA.html">O QUE É E COMO FUNCIONA?</a></li>
               <li><a href="vwMachineLearning.html">MACHINE LEARNING</a></li>
               <li><a href="vwDeepLearning.html">DEEP LEARNING</a></li>
               <li><a href="vwLinguagemNatural.html">PROCESSAMENTO DE LINGUAGEM NATURAL (PLN)</a></li>
@@ -59,13 +59,13 @@
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="vwFiccaoaRealidade.html">Da Ficção à Realidade</a></li>
-        <li><a class="nav-link scrollto" href="#">Como está Presente em Nosso Cotidiano?</a></li>
+        <li><a class="nav-link scrollto" href="vwIACotidiano.html">Como está Presente em Nosso Cotidiano?</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
   </div>
-</header><!-- End Header -->  
+</header><!-- End Header -->
 
 <main id="main">
   <div class="row">
@@ -73,10 +73,10 @@
  </div>
  <div class="section-title" data-aos="zoom-in">
   <h3>Processamento de Linguagem Natural <span>(PLN)</span></h3>
-  <p>Processamento de língua natural (PLN) é uma subárea da ciência da computação, inteligência artificial e da linguística, ela estuda os problemas da geração e compreensão automática de línguas humanas naturais.</p>
+  <p style="text-align: center;">Processamento de língua natural (PLN) é uma subárea da ciência da computação, inteligência artificial e da linguística, ela estuda os problemas da geração e compreensão automática de línguas humanas naturais.</p>
 </div>
-<div class="container">
-  <div class="row">
+<div class="container" >
+  <div class="row" data-aos="fade-up" >
     <div class="col-sm-5 col-md-6" align="justify">
       <p>Sistemas de geração de língua natural convertem informação de bancos de dados de computadores em linguagem compreensível ao ser humano e também convertem a linguagem humana em representações mais facilmente manipuláveis por programas de computador. A maior dificuldade da PLN são compreensão de língua natural, ou seja, extrair a linguagem de humanos para que faça sentido para computadores.</p>
       <p>A PLN tem base na aprendizagem mêcanica, especialmente na aprendizagem de máquinas estatísticas. Anteriormente, implementações de tarefas de processamento de linguagem envolviam a codificação direta de grandes conjuntos de regras. O paradigma da aprendizagem automática induz a aprendizagem automática de regras através de análises de corpora de exemplos típicos do mundo real ao invés de usar algoritmos gerais de aprendizagem, como a estátistica.</p>
@@ -88,7 +88,7 @@
       </figure>
     </div>
   </div>
-  <div class="row">
+  <div class="row" data-aos="fade-up" >
     <div class="col-sm-6 col-md-5 col-lg-6">
       <figure class="figure">
         <img src="assets/img/aprendizado2.PNG" class="figure-img img-fluid rounded" alt="...">
